--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <h2 style="font-family: Alba; font-size: 30px;">Vinti&copy;</h2>
       <center>  <h1 style="font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;">Error</h1></center>
         <p>We've detetced that your <b>wifi speeds</b> are to <b>slow.</b></p>
-        <p style="font-size: 12px;">PlingifyPlugPASS was unable to load <b>"/backuppass.github.io"</b> due to your wifi speeds being to slow. Please try again later or move closes to your router.</p>
+        <p style="font-size: 12px;">PlingifyPlug AntiMalware was unable to load <b>"/backuppass.github.io"</b> due to your wifi speeds being to slow. Please try again later or move closes to your router.</p>
 
         <div class="contentsearch"></div>
 <div id="background-slideshow"></div>
@@ -36,7 +36,7 @@
   </div>
 
 <div class="footer">
-    <p>&copy; 2025 Vinti. All rights reserved. | <a href="https://plingifyplug.com/">PlingifyPlug</a> | <a href="https://plingifyplug.com/contact-us">Support</a> | <a href="https://plingifyplug.com/privacy">Privacy Policy</a></p>
+    <p>&copy; 2025 PlingifyPlug. All rights reserved. | <a href="https://plingifyplug.com/">PlingifyPlug</a> | <a href="https://plingifyplug.com/contact-us">Support</a> | <a href="https://plingifyplug.com/privacy">Privacy Policy</a></p>
 
 </div>
 <script src="script.js"></script>
