--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <div class="container">
     <div class="content">
-        <h2 style="font-family: Alba; font-size: 30px;">Vinti&copy;</h2>
+        <h2 style="font-family: Alba; font-size: 30px;">PlingifyPlug&copy;</h2>
       <center>  <h1 style="font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;">Error</h1></center>
         <p>We've detetced that your <b>wifi speeds</b> are to <b>slow.</b></p>
         <p style="font-size: 12px;">PlingifyPlug AntiMalware was unable to load <b>"/backuppass.github.io"</b> due to your wifi speeds being to slow. Please try again later or move closes to your router.</p>
