--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 
 
-<div class="container">
+<div class="container" style="color: #ffffff;">
     <div class="content">
         <h2 style="font-family: Alba; font-size: 30px;">PlingifyPlug&copy;</h2>
       <center>  <h1 style="font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;">Error</h1></center>
@@ -22,7 +22,10 @@
         <p style="font-size: 12px;">PlingifyPlug AntiMalware was unable to load <b>"/backuppass.github.io"</b> due to your wifi speeds being to slow. Please try again later or move closes to your router.</p>
 
         <div class="contentsearch"></div>
-<div id="background-slideshow"></div>
+
+    </div>
+
+    <div id="background-slideshow"></div>
 
 
 <div class="cookie-card" id="cookie-card">
@@ -39,6 +42,7 @@
     <p>&copy; 2025 PlingifyPlug. All rights reserved. | <a href="https://plingifyplug.com/">PlingifyPlug</a> | <a href="https://plingifyplug.com/contact-us">Support</a> | <a href="https://plingifyplug.com/privacy">Privacy Policy</a></p>
 
 </div>
+
 <script src="script.js"></script>
 </body>
 </html>
