--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta  name="viewport" content="width=device-width, initial-scale=1.0">
-
     <title>Error</title>
     <script async src="https://cse.google.com/cse.js?cx=85edc5572b6e44ef8"></script>
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" href="VintiLogo.png">
+    <script defer="defer" type="text/javascript" src="https://www.plingifyplug.com/im_livechat/loader/2"></script>    
+    <script defer="defer" type="text/javascript" src="https://www.plingifyplug.com/im_livechat/assets_embed.js"></script>
 </head>
 <body>
 
